# 33.5-3-Data-registry-on-templates

./: CMakeLists.txt  README.md
include/: data.h  registry.h
src/: CMakeLists.txt  main.cpp
